Changelog
=========


2.1.3 (unreleased)
------------------

- Adjust tranlsation of the assigned_task tab.
  Issue #1545 Namen Anpassen
  https://extranet.4teamwork.ch/projects/opengever-kanton-zug/sprint-backlog/1545
  [phgross]

- Activate and configure tabbedview quickupload plugin for opengever.
  Issue #549 Abklaerung: Drag and drop
  https://extranet.4teamwork.ch/projects/opengever-kanton-zug/sprint-backlog/549
  [phgross]

- Removed reset_grid_state functionality, because it's now part of the ftw.tabbedview.
  [phgross]


2.1.2 (2012-03-28)
------------------

- Add and change translations
  [ttschanz]


2.1.1 (2012-02-28)
------------------

- Implements custom sort method for sorting on translated review_states.
  Issue #1423 Tabbedview Customsort Methode fuer Status Sortierung implementieren
  https://extranet.4teamwork.ch/projects/opengever-kanton-zug/sprint-backlog/1423/
  [phgross]


2.1 (2012-02-27)
----------------

- SQL listings: ignore all task date columns when filtering (updated helper list).
  [jone]

- SQL listings: fix encoding problem when filtering.
  [jone]

- Use the get_css_class() function for guessing the icon css class.
  [jone]

- Added French translations.
  [ttschanz]

- linked() helper: Use a special helper for subtasks.
  Issue #1373 Spezielles Icon fuer Unteraufgaben.
  https://extranet.4teamwork.ch/projects/opengever-kanton-zug/sprint-backlog/1373
  [jone]

- Fixed tests: Added opengever.repository to tests_require
  [lgraf]

- linked() helper: Use a special icon for related documents
  [lgraf]

- Improve "linked" tabbedview helper, so that remote-tasks have a seperate icon.
  Issue #1300 Mandantenuebergreifende Aufgaben sollten speziell markiert werden koennen.
  https://extranet.4teamwork.ch/projects/opengever-kanton-zug/sprint-backlog/1300
  [jone]

- Added containing_dossier column to every tasklisting.