@@ -16,6 +16,7 @@ from opengever.tabbedview.helper import readable_ogds_user
 from opengever.tabbedview.helper import workflow_state
 from opengever.tabbedview.interfaces import ITaskCatalogTableSourceConfig
 from opengever.tabbedview.utils import get_translated_transitions
+from opengever.tabbedview.utils import get_translated_types
 from opengever.task.helper import task_type_helper
 from plone.dexterity.interfaces import IDexterityContainer
 from zope.app.pagetemplate import ViewPageTemplateFile
@@ -110,6 +111,21 @@ class OpengeverTab(object):
 
             results = list(results)
             results.sort(_state_sorter, reverse=sort_reverse)
+
+        elif sort_on in 'task_type':
+
+            types = get_translated_types(self.context, self.request)
+
+            def _type_sorter(a, b):
+
+                return cmp(
+                    types.get(
+                        getattr(a, sort_on, ''), getattr(a, sort_on, '')),
+                    types.get(getattr(b, sort_on, ''), getattr(b, sort_on, ''))
+                    )
+
+            results = list(results)
+            results.sort(_type_sorter, reverse=sort_reverse)
 
         return results
 
