@@ -5,6 +5,11 @@ Changelog
 2.1.3 (unreleased)
 ------------------
 
+- Added custom sort for the task_type column.
+  Issue #1514 Aufgaben-Tab: Sortierung nach Auftragstyp sortiert nicht alphabetisch
+  https://extranet.4teamwork.ch/projects/opengever-kanton-zug/sprint-backlog/1514
+  [phgross]
+
 - Adjust tranlsation of the assigned_task tab.
   Issue #1545 Namen Anpassen
   https://extranet.4teamwork.ch/projects/opengever-kanton-zug/sprint-backlog/1545
